# Vending-Machine-Sales

./: README.md  pyproject.toml  requirements.txt
vending_machine_sales/render/: render.ipynb
